wayland/surface: pass encoding range to the color descriptiion too

Otherwise it just gets completely ignored, and you end up with limited range
video being interpreted as full range.

BUG: 503080